--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -104,6 +104,11 @@ bind-key -r M-j resize-pane -D 2
 bind-key -r M-k resize-pane -U 2
 bind-key -r M-l resize-pane -R 4
 
+## ---------------------- ##
+## ----- Panes Sync ----- ##
+## ---------------------- ##
+bind-key M-s set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
 ## ---------------------------------- ##
 ## ----- Toogle to Tiled Layout ----- ## # Similar to Reset the Resize Panes
 ## ---------------------------------- ##
